# mangadex-hydra

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  functions.py  main.py  pyproject.toml  requirements.txt
templates/: downloads.html  index.html
